--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ env:
   - CMAKE_C_COMPILER=gcc-4.9
   - LD_LIBRARY_PATH=.
 after_success:
-  - pwd ; bash <(curl -s https://codecov.io/bash) -f ./coverage/coverage.info || echo "Codecov did not collect coverage reports"
+  - bash <(curl -s https://codecov.io/bash) -f ./coverage/coverage.info || echo "Codecov did not collect coverage reports"
 deploy:
   provider: releases
   api-key: "uw8e4USTAS6c9LFhRMYOvw"
