--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -401,13 +401,20 @@ if (HMIADAPTER STREQUAL "mqueue")
 endif()
 
 # --- Directory with SDL interfaces, global types and ProtocolLib component
-include_directories(
-  ${COMPONENTS_DIR}/include
-  ${COMPONENTS_DIR}/protocol/include
 if (BUILD_TESTS)
-  ${COMPONENTS_DIR}/include/test
-endif ()
-)
+  include_directories(
+    ${COMPONENTS_DIR}/include
+    ${COMPONENTS_DIR}/protocol/include
+    ${COMPONENTS_DIR}/include/test
+  )
+else(BUILD_TESTS)
+  include_directories(
+    ${COMPONENTS_DIR}/include
+    ${COMPONENTS_DIR}/protocol/include
+  )
+endif(BUILD_TESTS)
+
+
 
 # --- 3rd party libs
 INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/src/3rd_party/set_3rd_party_paths.cmake)
