Move RC functionality for Lifecycle, CMakeLists and ini

--- a/src/appMain/CMakeLists.txt
+++ b/src/appMain/CMakeLists.txt
@@ -35,9 +35,9 @@ find_package(SDLOpenSSL REQUIRED)
 include_directories(
   ${COMPONENTS_DIR}/protocol_handler/include
   ${COMPONENTS_DIR}/application_manager/include
+  ${COMPONENTS_DIR}/can_cooperation/include
   ${COMPONENTS_DIR}/formatters/include
   ${COMPONENTS_DIR}/transport_manager/include
-  ${COMPONENTS_DIR}/security_manager/include
   ${COMPONENTS_DIR}/security_manager/include
   ${COMPONENTS_DIR}/config_profile/include
   ${COMPONENTS_DIR}/utils/include
@@ -47,9 +47,10 @@ include_directories(
   ${COMPONENTS_DIR}/smart_objects/include
   ${COMPONENTS_DIR}/media_manager/include
   ${COMPONENTS_DIR}/telemetry_monitor/include
-  ${POLICY_PATH}/include/
+  ${COMPONENTS_DIR}/functional_module/include
+  ${POLICY_PATH}/include
   ${POLICY_GLOBAL_INCLUDE_PATH}/
-  ${COMPONENTS_DIR}/rpc_base/include/
+  ${COMPONENTS_DIR}/rpc_base/include
   ${COMPONENTS_DIR}/resumption/include
   ${COMPONENTS_DIR}/dbus/include
   ${CMAKE_BINARY_DIR}/src/components
@@ -113,6 +114,12 @@ set(LIBRARIES
   ConfigProfile
   Resumption
 )
+if(REMOTE_CONTROL)
+    SET (LIBRARIES
+      ${LIBRARIES}
+      FunctionalModule
+    )
+endif(REMOTE_CONTROL)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
   list(APPEND LIBRARIES pthread)
@@ -137,6 +144,16 @@ if(ENABLE_LOG)
   list(APPEND LIBRARIES aprutil-1 -L${APR_UTIL_LIBS_DIRECTORY})
   list(APPEND LIBRARIES expat -L${EXPAT_LIBS_DIRECTORY})
 endif()
+
+include_directories (
+  ${default_media_inc}
+)
+
+set (SOURCES
+  main.cc
+  life_cycle.cc
+  signal_handlers.cc
+)
 
 add_executable(${PROJECT} ${SOURCES})
 target_link_libraries(${PROJECT} ${LIBRARIES})
@@ -168,7 +185,7 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/.git)
       file(READ ${INI_FILE} FILE_CONTENT)
       set(LINE SDLVersion)
       set(SEARCH_REGEX "${LINE}([^/\r/\n]+)")
-      string(REGEX REPLACE "${SEARCH_REGEX}" "${LINE} = ${GITCOMMIT}" 
+      string(REGEX REPLACE "${SEARCH_REGEX}" "${LINE} = ${GITCOMMIT}"
              MODIFIED_FILE_CONTENT "${FILE_CONTENT}")
       file(WRITE "${INI_FILE}" "${MODIFIED_FILE_CONTENT}")
     endif()
@@ -196,12 +213,25 @@ endif ()
 
 # Install rules
 install(TARGETS ${PROJECT} DESTINATION bin)
+
 install(
   FILES log4cxx.properties audio.8bit.wav test.txt smartDeviceLink.ini
-    hmi_capabilities.json sdl_preloaded_pt.json
+    hmi_capabilities.json
     ${CMAKE_SOURCE_DIR}/mycert.pem ${CMAKE_SOURCE_DIR}/mykey.pem
   DESTINATION bin
 )
+if (REMOTE_CONTROL)
+  install(
+    FILES "${CMAKE_SOURCE_DIR}/src/components/can_cooperation/reverse_sdl_pt.json"
+    DESTINATION ${CMAKE_BINARY_DIR}/bin
+    RENAME sdl_preloaded_pt.json
+  )
+else ()
+  install(
+    FILES sdl_preloaded_pt.json
+    DESTINATION bin
+  )
+endif ()
 
 if (${QT_HMI})
   if (CMAKE_SYSTEM_NAME STREQUAL "QNX")
